admin/logs/2021-02-26_21.18.11.txt
  File "/Users/Shared/RemoteShare/inventory/admin/csvImporter.py", line 149
    global totalGoodLines = 0
                          ^
SyntaxError: invalid syntax
